--- a/index.html
+++ b/index.html
@@ -1,199 +1,293 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width,initial-scale=1.0">
-<title>Million Hope</title>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1.0"/>
+<title>Million Hope — Grid</title>
 <style>
 :root{
-  --bg:#0f0f10;
-  --panel:#141416;
-  --accent:#0f0;
-  --muted:#7b7b7b;
-  --purchased:#0a8f3a;
-  --selected:#16c516;
-  --hover:#00a3ff;
+  --bg:#0f0f10; --panel:#141416; --accent:#0f0; --muted:#7b7b7b;
+  --avail:#333; --purchased:#0a8f3a; --selected:#16c516; --hover:#00a3ff;
 }
-body{margin:0;font-family:Arial,sans-serif;background:var(--bg);color:#eee;display:flex;justify-content:center;align-items:flex-start;height:100vh;overflow:hidden;}
-#canvasContainer{position:relative;background:#0b0b0b;margin:20px;display:flex;justify-content:center;align-items:center;box-shadow:0 0 12px #000;}
-canvas{background:#0b0b0b;display:block;}
-#sidebar{width:360px;height:calc(100vh - 40px);background:var(--panel);border-left:1px solid #222;display:flex;flex-direction:column;padding:12px;overflow-y:auto;margin-top:20px;}
-#sidebar h2{margin:0 0 12px 0;color:var(--accent);}
-.pixelList{margin-top:12px;display:flex;flex-direction:column;gap:6px;}
-.pixelItem{display:flex;gap:6px;align-items:center;border:1px solid #222;padding:6px;border-radius:6px;background:#111;position:relative;}
-.pixelItem img{width:48px;height:48px;object-fit:cover;border-radius:4px;}
-.pixelItem input[type="file"], .pixelItem input[type="text"]{flex:1;padding:4px;background:#0b0b0b;border:1px solid #222;color:#fff;border-radius:4px;}
-button{cursor:pointer;border:none;border-radius:6px;}
-.controlBtn{background:var(--accent);color:#000;padding:8px 12px;margin-top:6px;font-weight:700;}
-.checkboxContainer{display:flex;align-items:center;gap:6px;margin-top:6px;}
-.hiddenInput{display:none;margin-top:4px;}
+*{box-sizing:border-box}
+body{margin:0;font-family:Inter,Arial,Helvetica,sans-serif;background:var(--bg);color:#eee;overflow:hidden}
+nav{position:fixed;left:0;right:0;top:0;height:56px;background:#151515;display:flex;align-items:center;padding:8px 12px;z-index:40}
+nav img{height:34px;margin-right:10px}
+nav h1{color:var(--accent);font-size:18px;margin:0 14px 0 0}
+nav .spacer{flex:1}
+button,input,select,textarea{font-family:inherit;font-size:14px}
+
+/* canvas area */
+#canvasContainer{position:absolute;top:56px;left:0;right:0;bottom:0;background:var(--bg);overflow:hidden}
+canvas{display:block;width:100%;height:100%;background:transparent;cursor:crosshair}
+
+/* sidebar */
+#sidebar{position:fixed;top:56px;right:-360px;width:360px;bottom:0;background:var(--panel);border-left:1px solid #222;padding:12px;overflow-y:auto;transition:right .25s;z-index:45}
+#sidebar.open{right:0}
+#sidebar h2{margin:6px 0 10px 0}
+
+/* pixel item */
+.pixelSection{display:flex;gap:8px;align-items:flex-start;border:1px solid #222;padding:8px;border-radius:8px;margin-bottom:8px;background:#111;position:relative}
+.pixelSection img{width:56px;height:56px;object-fit:cover;border-radius:4px}
+.pixelMeta{flex:1;font-size:13px}
+.pixelMeta input{width:100%;margin-top:6px;padding:6px;border-radius:6px;border:1px solid #222;background:#0b0b0b;color:#fff}
+.removePixel{position:absolute;top:6px;right:6px;background:#cc3333;border:none;color:#fff;border-radius:50%;width:24px;height:24px;cursor:pointer}
+
+/* small controls */
+.controls{position:fixed;top:64px;right:12px;z-index:46;display:flex;flex-direction:column;gap:8px}
+.controlBtn{background:var(--accent);color:#0b0b0b;border:none;padding:10px 12px;border-radius:8px;cursor:pointer}
+.small{padding:8px 10px;font-size:13px}
+
+/* minimap */
+#minimapWrap{position:fixed;left:12px;bottom:12px;background:rgba(0,0,0,0.45);padding:8px;border-radius:8px;border:1px solid #222;z-index:46}
+#minimap{width:160px;height:160px;display:block;background:#0b0b0b;border-radius:4px}
+
+/* footer/help */
+.footer{position:fixed;left:12px;top:12px;background:rgba(0,0,0,0.35);padding:6px 10px;border-radius:6px;border:1px solid #222;font-size:13px;z-index:46}
 </style>
 </head>
 <body>
 
+<nav>
+  <img src="https://via.placeholder.com/34" alt="logo">
+  <h1>Million Hope</h1>
+  <div class="spacer"></div>
+</nav>
+
 <div id="canvasContainer">
-  <canvas id="pixelCanvas" width="600" height="600"></canvas>
+  <canvas id="pixelCanvas"></canvas>
 </div>
 
-<div id="sidebar">
-  <h2>Buy Pixels - Million Hope</h2>
-
-  <div class="checkboxContainer">
-    <input type="checkbox" id="sliceImage"> Slice one image
+<!-- sidebar -->
+<div id="sidebar" aria-hidden="true">
+  <h2>Selected Pixels</h2>
+  <label style="display:flex;align-items:center;gap:8px;margin-bottom:8px">
+    <input type="checkbox" id="singleLink"> Use one hyperlink for all pixels
+  </label>
+  <div style="display:flex;gap:8px;margin-bottom:8px">
+    <button id="bulkApply" class="controlBtn">Bulk apply image/link</button>
+    <button id="boxSelectToggle" class="controlBtn">Box Select</button>
   </div>
-  <input type="file" id="sliceImageInput" class="hiddenInput" accept="image/*">
-
-  <div class="checkboxContainer">
-    <input type="checkbox" id="applyImageAll"> Apply same image for all
-  </div>
-  <input type="file" id="applyImageAllInput" class="hiddenInput" accept="image/*">
-
-  <div class="checkboxContainer">
-    <input type="checkbox" id="singleLink"> Use one hyperlink
-  </div>
-  <input type="text" id="singleLinkInput" class="hiddenInput" placeholder="Paste hyperlink here">
-
-  <button id="clearSelection" class="controlBtn">Clear Selection</button>
-
-  <div id="pixelList" class="pixelList"></div>
+  <div id="pixelList"></div>
+  <div id="totalCost" style="margin-top:8px;font-weight:700">Total Cost: 0 JOD</div>
+  <button id="checkout" style="margin-top:10px;padding:10px;border-radius:8px;border:none;background:var(--accent);color:#000;font-weight:700">Checkout</button>
 </div>
+
+<!-- controls -->
+<div class="controls" id="controls">
+  <button id="buyButton" class="controlBtn">Buy Pixels</button>
+  <button id="clearSelection" class="controlBtn small">Clear Sel</button>
+</div>
+
+<!-- minimap -->
+<div id="minimapWrap">
+  <canvas id="minimap"></canvas>
+</div>
+
+<!-- footer/help -->
+<div class="footer"></div>
 
 <script>
-const canvas = document.getElementById('pixelCanvas');
-const ctx = canvas.getContext('2d');
-const COLS = 100, ROWS = 100;
-const canvasSize = 600;
-const pixelSize = canvasSize / COLS;
+const COLS=1000,ROWS=1000;
+let purchasedPixels={};
+let selectedPixels=[];
+const PRICE_PER_PIXEL=1;
 
-let purchasedPixels = {};
-let selectedPixels = [];
+/* canvas setup */
+const container=document.getElementById('canvasContainer');
+const canvas=document.getElementById('pixelCanvas');
+const ctx=canvas.getContext('2d',{alpha:false});
+const dpi=Math.max(1,window.devicePixelRatio||1);
+let scale=1,minScale=1,maxScale=60;
+let offsetX=0,offsetY=0;
+let isDragging=false,dragStart={x:0,y:0};
+let buyMode=false,hoveredCell=null;
+const buyButton=document.getElementById('buyButton');
+const pixelList=document.getElementById('pixelList');
+const singleLinkCheckbox=document.getElementById('singleLink');
+const totalCostEl=document.getElementById('totalCost');
 
-// Draw grid and pixels
-function draw(){
-  ctx.clearRect(0,0,canvas.width,canvas.height);
-
-  // Draw purchased pixels
-  ctx.fillStyle = getComputedStyle(document.documentElement).getPropertyValue('--purchased');
-  for(const key in purchasedPixels){
-    const [r,c] = key.split(',').map(Number);
-    ctx.fillRect(c*pixelSize,r*pixelSize,pixelSize,pixelSize);
-  }
-
-  // Draw selected pixels
-  ctx.fillStyle = getComputedStyle(document.documentElement).getPropertyValue('--selected');
-  for(const p of selectedPixels){
-    ctx.fillRect(p.col*pixelSize,p.row*pixelSize,pixelSize,pixelSize);
-  }
-
-  // Draw grid
-  ctx.strokeStyle = '#222';
-  ctx.lineWidth = 0.5;
-  for(let i=0;i<=COLS;i++){
-    ctx.beginPath();
-    ctx.moveTo(i*pixelSize,0);
-    ctx.lineTo(i*pixelSize,canvasSize);
-    ctx.stroke();
-  }
-  for(let j=0;j<=ROWS;j++){
-    ctx.beginPath();
-    ctx.moveTo(0,j*pixelSize);
-    ctx.lineTo(canvasSize,j*pixelSize);
-    ctx.stroke();
-  }
+/* resize */
+function resize(){
+  const w=container.clientWidth,h=container.clientHeight;
+  canvas.style.width=w+'px';
+  canvas.style.height=h+'px';
+  canvas.width=Math.floor(w*dpi);
+  canvas.height=Math.floor(h*dpi);
+  ctx.setTransform(dpi,0,0,dpi,0,0);
+  const fit=Math.min(w/COLS,h/ROWS);
+  if(scale===1){scale=fit;minScale=fit;offsetX=(w-COLS*scale)/2;offsetY=(h-ROWS*scale)/2;}
+  constrainView(); draw(); drawMinimap();
 }
-draw();
+window.addEventListener('resize',resize);
 
-// Convert mouse to grid cell
-function screenToCell(x,y){
-  const rect = canvas.getBoundingClientRect();
-  const cx = x - rect.left;
-  const cy = y - rect.top;
-  const col = Math.floor(cx / pixelSize);
-  const row = Math.floor(cy / pixelSize);
+/* map screen->world */
+function screenToWorld(clientX,clientY){
+  const rect=canvas.getBoundingClientRect();
+  const x=(clientX-rect.left-offsetX)/scale;
+  const y=(clientY-rect.top-offsetY)/scale;
+  return {x,y};
+}
+function worldToCell(x,y){
+  const col=Math.floor(x),row=Math.floor(y);
   if(col<0||row<0||col>=COLS||row>=ROWS) return null;
   return {row,col};
 }
 
-// Canvas click
-canvas.addEventListener('click', e=>{
-  const cell = screenToCell(e.clientX,e.clientY);
-  if(!cell) return;
-  const idx = selectedPixels.findIndex(p=>p.row===cell.row && p.col===cell.col);
-  if(idx>-1) selectedPixels.splice(idx,1);
-  else selectedPixels.push({row:cell.row,col:cell.col,image:null,link:''});
-  updateSidebar();
-  draw();
-});
-
-// Sidebar checkboxes show inputs
-function setupCheckbox(id,inputId){
-  const cb = document.getElementById(id);
-  const input = document.getElementById(inputId);
-  cb.addEventListener('change',()=>{
-    input.style.display = cb.checked ? 'block' : 'none';
-  });
+/* constrain view */
+function constrainView(){
+  const w=canvas.clientWidth,h=canvas.clientHeight;
+  const worldW=COLS*scale,worldH=ROWS*scale;
+  if(worldW<=w) offsetX=(w-worldW)/2; else offsetX=Math.min(0,Math.max(offsetX,w-worldW));
+  if(worldH<=h) offsetY=(h-worldH)/2; else offsetY=Math.min(0,Math.max(offsetY,h-worldH));
 }
-setupCheckbox('sliceImage','sliceImageInput');
-setupCheckbox('applyImageAll','applyImageAllInput');
-setupCheckbox('singleLink','singleLinkInput');
 
-// Clear selection
-document.getElementById('clearSelection').addEventListener('click',()=>{
-  selectedPixels=[];
-  updateSidebar();
-  draw();
+/* draw */
+function draw(){
+  ctx.save(); ctx.setTransform(1,0,0,1,0,0); ctx.clearRect(0,0,canvas.width,canvas.height); ctx.restore();
+  ctx.save(); ctx.translate(offsetX,offsetY); ctx.scale(scale,scale);
+  ctx.fillStyle='#0b0b0b'; ctx.fillRect(0,0,COLS,ROWS);
+
+  // purchased
+  ctx.fillStyle='var(--purchased)';
+  for(const key in purchasedPixels){
+    const [r,c]=key.split(',').map(Number);
+    ctx.fillRect(c,r,1,1);
+  }
+
+  // selected
+  ctx.fillStyle='var(--selected)';
+  for(let p of selectedPixels) ctx.fillRect(p.col,p.row,1,1);
+
+  // hover
+  if(buyMode && hoveredCell){
+    const key=`${hoveredCell.row},${hoveredCell.col}`;
+    if(!purchasedPixels[key]){
+      ctx.fillStyle='var(--hover)';
+      ctx.fillRect(hoveredCell.col,hoveredCell.row,1,1);
+    }
+  }
+  ctx.restore();
+  drawMinimapViewport();
+}
+
+/* buy button */
+buyButton.addEventListener('click',()=>{
+  buyMode=!buyMode;
+  buyButton.textContent=buyMode?'Exit Buy Mode':'Buy Pixels';
+  document.getElementById('sidebar').classList.toggle('open',buyMode && selectedPixels.length>0);
+  if(!buyMode){selectedPixels=[];updateSidebar();draw();}
 });
 
-// Update sidebar pixel list
+/* click select */
+canvas.addEventListener('click',e=>{
+  if(isDragging) return;
+  const {x,y}=screenToWorld(e.clientX,e.clientY);
+  const cell=worldToCell(x,y); if(!cell) return;
+  const key=`${cell.row},${cell.col}`;
+  if(buyMode){
+    if(purchasedPixels[key]) return;
+    const idx=selectedPixels.findIndex(p=>p.row===cell.row&&p.col===cell.col);
+    if(idx>-1) selectedPixels.splice(idx,1); else selectedPixels.push({row:cell.row,col:cell.col,image:null,link:''});
+    updateSidebar(); draw();
+  } else { if(purchasedPixels[key] && purchasedPixels[key].link) window.open(purchasedPixels[key].link,'_blank'); }
+});
+
+/* hover highlight */
+canvas.addEventListener('mousemove',e=>{
+  if(!buyMode || isDragging) return;
+  const {x,y}=screenToWorld(e.clientX,e.clientY);
+  const cell=worldToCell(x,y); if(!cell){hoveredCell=null;draw();return;}
+  if(!hoveredCell || hoveredCell.row!==cell.row || hoveredCell.col!==cell.col){
+    hoveredCell=cell; draw();
+  }
+});
+
+/* pan */
+canvas.addEventListener('mousedown',e=>{if(e.button!==0)return;isDragging=true;dragStart.x=e.clientX-offsetX;dragStart.y=e.clientY-offsetY;});
+window.addEventListener('mousemove',e=>{if(isDragging){offsetX=e.clientX-dragStart.x;offsetY=e.clientY-dragStart.y;constrainView();draw();}});
+window.addEventListener('mouseup',()=>{isDragging=false;});
+
+/* keyboard */
+window.addEventListener('keydown',e=>{if(e.key==='Escape'){buyMode=false;selectedPixels=[];updateSidebar();draw();}});
+
+/* clear selection */
+document.getElementById('clearSelection').addEventListener('click',()=>{selectedPixels=[];updateSidebar();draw();});
+
+/* update sidebar */
 function updateSidebar(){
-  const pixelList = document.getElementById('pixelList');
+  const sidebarEl=document.getElementById('sidebar');
+  sidebarEl.classList.toggle('open',selectedPixels.length>0);
   pixelList.innerHTML='';
   selectedPixels.forEach((p,i)=>{
-    const div = document.createElement('div');
-    div.className='pixelItem';
-    div.innerHTML=`
-      <img src="${p.image||'https://via.placeholder.com/48'}">
-      <input type="file" data-index="${i}" accept="image/*">
-      <input type="text" placeholder="Hyperlink" data-index="${i}" value="${p.link||''}">
-      <button data-index="${i}">×</button>
-    `;
+    const div=document.createElement('div'); div.className='pixelSection';
+    div.innerHTML=`<button class="removePixel" data-index="${i}">×</button>
+      <img src="${p.image||'https://via.placeholder.com/56'}" alt="">
+      <div class="pixelMeta">
+        <div style="font-size:13px">Row: <strong>${p.row}</strong> &nbsp; Col: <strong>${p.col}</strong></div>
+        <input type="file" class="imageInput" data-index="${i}" accept="image/*"/>
+        <input type="url" class="linkInput" data-index="${i}" placeholder="https://example.com" value="${p.link||''}" style="display:${singleLinkCheckbox.checked?'none':'block'}"/>
+      </div>`;
+    div.querySelector('.removePixel').addEventListener('click',()=>{selectedPixels.splice(i,1);updateSidebar();draw();});
     pixelList.appendChild(div);
   });
-
-  // Image upload per pixel
-  pixelList.querySelectorAll('input[type="file"]').forEach(input=>{
-    input.addEventListener('change',e=>{
-      const idx = e.target.dataset.index;
-      const file = e.target.files[0];
-      if(!file) return;
-      const reader = new FileReader();
-      reader.onload = ev=>{
-        selectedPixels[idx].image = ev.target.result;
-        updateSidebar();
-        draw();
-      };
-      reader.readAsDataURL(file);
-    });
-  });
-
-  // Link input per pixel
-  pixelList.querySelectorAll('input[type="text"]').forEach(input=>{
-    input.addEventListener('input',e=>{
-      const idx = e.target.dataset.index;
-      selectedPixels[idx].link = e.target.value.trim();
-    });
-  });
-
-  // Remove pixel
-  pixelList.querySelectorAll('button').forEach(btn=>{
-    btn.addEventListener('click',e=>{
-      const idx = e.target.dataset.index;
-      selectedPixels.splice(idx,1);
-      updateSidebar();
-      draw();
-    });
-  });
+  totalCostEl.innerText=`Total Cost: ${selectedPixels.length} JOD`;
 }
+
+/* handle file/link changes */
+pixelList.addEventListener('change',e=>{
+  const idx=parseInt(e.target.dataset.index);
+  if(e.target.classList.contains('imageInput')){
+    const file=e.target.files[0]; if(!file) return;
+    const reader=new FileReader(); reader.onload=ev=>{selectedPixels[idx].image=ev.target.result;updateSidebar();}; reader.readAsDataURL(file);
+  } else if(e.target.classList.contains('linkInput')){
+    selectedPixels[idx].link=e.target.value.trim();
+  }
+});
+
+/* bulk apply */
+document.getElementById('bulkApply').addEventListener('click',()=>{
+  if(selectedPixels.length===0) return alert('Select pixels first');
+  const fileInput=document.createElement('input'); fileInput.type='file'; fileInput.accept='image/*';
+  fileInput.onchange=()=>{const f=fileInput.files[0];if(!f) return;const reader=new FileReader();reader.onload=()=>{for(let p of selectedPixels)p.image=reader.result;const link=prompt('Enter common hyperlink (leave empty if none)');if(link!==null)selectedPixels.forEach(p=>p.link=link.trim());updateSidebar();};reader.readAsDataURL(f);};
+  fileInput.click();
+});
+
+/* checkout */
+document.getElementById('checkout').addEventListener('click',()=>{
+  if(selectedPixels.length===0) return alert('No pixels selected');
+  if(singleLinkCheckbox.checked){
+    const link=prompt('Enter hyperlink for ALL selected pixels:');
+    if(link===null) return;
+    selectedPixels.forEach(p=>p.link=link.trim());
+  }
+  const payload=selectedPixels.map(p=>({row:p.row,col:p.col,link:p.link,image:p.image}));
+  console.log('Ready to send:',payload);
+  alert(`Demo: Purchased ${selectedPixels.length} pixel(s). Check console.`);
+  for(const p of selectedPixels) purchasedPixels[`${p.row},${p.col}`]={link:p.link||'',image:p.image||''};
+  selectedPixels=[]; updateSidebar(); draw();
+});
+
+/* minimap */
+const minimap=document.getElementById('minimap');
+const mctx=minimap.getContext('2d');
+function drawMinimap(){
+  const mw=minimap.width=minimap.clientWidth*dpi,mh=minimap.height=minimap.clientHeight*dpi;
+  mctx.setTransform(dpi,0,0,dpi,0,0); mctx.clearRect(0,0,minimap.clientWidth,minimap.clientHeight);
+  mctx.fillStyle='#070707'; mctx.fillRect(0,0,minimap.clientWidth,minimap.clientHeight);
+  // purchased demo
+  mctx.fillStyle='#0a8f3a';
+  for(const key in purchasedPixels){const [r,c]=key.split(',').map(Number);mctx.fillRect(c/COLS*minimap.clientWidth,r/ROWS*minimap.clientHeight,1,1);}
+  // view rectangle
+  const viewLeft=(-offsetX)/scale/COLS*minimap.clientWidth;
+  const viewTop=(-offsetY)/scale/ROWS*minimap.clientHeight;
+  const viewW=canvas.clientWidth/scale/COLS*minimap.clientWidth;
+  const viewH=canvas.clientHeight/scale/ROWS*minimap.clientHeight;
+  mctx.strokeStyle='#00a3ff'; mctx.lineWidth=2; mctx.strokeRect(viewLeft,viewTop,viewW,viewH);
+}
+function drawMinimapViewport(){drawMinimap();}
+
+resize(); draw();
 </script>
 </body>
 </html>
